--- a/index.html
+++ b/index.html
@@ -3,75 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AnimeStream | Ver Episodio</title>
+    <title>AnimeStream Pro</title>
     <style>
-        /* Estilo oscuro tipo Netflix/Crunchyroll */
-        body {
-            background-color: #0b0b0b;
-            color: white;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
-        header {
-            background-color: #1a1a1a;
-            padding: 1rem;
-            text-align: center;
-            border-bottom: 2px solid #e50914; /* Rojo acento */
-        }
-        .container {
-            max-width: 1000px;
-            margin: 20px auto;
-            padding: 0 20px;
-        }
-        .video-wrapper {
-            position: relative;
-            padding-bottom: 56.25%; /* Relación de aspecto 16:9 */
-            height: 0;
-            overflow: hidden;
-            box-shadow: 0 0 20px rgba(0,0,0,0.5);
-        }
-        .video-wrapper iframe {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            border: none;
-        }
-        .info-anime {
-            margin-top: 20px;
-            background: #1a1a1a;
-            padding: 15px;
-            border-radius: 8px;
-        }
+        body { background: #0f0f0f; color: white; font-family: sans-serif; margin: 0; }
+        header { background: #1a1a1a; padding: 20px; text-align: center; border-bottom: 3px solid #ff4500; }
+        
+        .main-player { max-width: 900px; margin: 20px auto; padding: 0 15px; }
+        .iframe-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; border-radius: 10px; background: #000; }
+        .iframe-container iframe { position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: 0; }
+
+        .catalog { max-width: 1200px; margin: 40px auto; padding: 20px; display: grid; grid-template-columns: repeat(auto-fill, minmax(180px, 1fr)); gap: 20px; }
+        .anime-card { background: #1e1e1e; border-radius: 8px; overflow: hidden; cursor: pointer; transition: transform 0.3s; border: 1px solid #333; }
+        .anime-card:hover { transform: scale(1.05); border-color: #ff4500; }
+        .anime-card img { width: 100%; height: 250px; object-fit: cover; }
+        .anime-card h3 { font-size: 14px; padding: 10px; margin: 0; text-align: center; }
     </style>
 </head>
 <body>
 
-    <header>
-        <h1>Anime<span style="color: #e50914;">Stream</span></h1>
-    </header>
+<header>
+    <h1>ANIME<span style="color:#ff4500">STREAM</span></h1>
+</header>
 
-    <div class="container">
-        <h2>Nombre del Anime - Episodio 01</h2>
-        
-        <div class="video-wrapper">
-            <iframe 
-                src="https://www.youtube.com/embed/eB6txyhHFG4" 
-                title="Reproductor de Anime" 
-                allowfullscreen>
-            </iframe>
-        </div>
+<div class="main-player">
+    <h2 id="current-title">Selecciona un anime abajo</h2>
+    <div class="iframe-container">
+        <iframe id="video-player" src="" allowfullscreen></iframe>
+    </div>
+</div>
 
-        <div class="info-anime">
-            <h3>Sinopsis</h3>
-            <p>Aquí puedes colocar la descripción de lo que trata este capítulo o la serie en general.</p>
-            <button style="background: #e50914; color: white; border: none; padding: 10px 20px; cursor: pointer; border-radius: 5px;">
-                Siguiente Episodio →
-            </button>
-        </div>
+<div class="catalog" id="anime-list">
     </div>
 
+<script src="script.js"></script>
 </body>
 </html>
