--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             margin: 0;
             letter-spacing: 2px;
             font-size: 1.8rem;
+            text-transform: uppercase;
         }
 
         header span {
@@ -56,18 +57,21 @@
             margin-bottom: 15px;
             border-left: 4px solid var(--primary);
             padding-left: 15px;
+            color: var(--text-main);
         }
 
         .video-container {
             position: relative;
-            padding-bottom: 56.25%; /* 16:9 */
+            padding-bottom: 56.25%; /* Relación 16:9 */
             height: 0;
             background: #000;
             border-radius: 12px;
-            box-shadow: 0 10px 30px rgba(0,0,0,0.5);
+            box-shadow: 0 10px 40px rgba(0,0,0,0.8);
             overflow: hidden;
+            border: 1px solid #333;
         }
 
+        /* EL IFRAME MEJORADO */
         .video-container iframe {
             position: absolute;
             top: 0;
@@ -88,6 +92,8 @@
             font-size: 1.5rem;
             margin-bottom: 20px;
             color: var(--text-main);
+            border-bottom: 1px solid #333;
+            padding-bottom: 10px;
         }
 
         #anime-list {
@@ -96,39 +102,35 @@
             gap: 25px;
         }
 
-        /* TARJETAS DE ANIME (EL DISEÑO) */
+        /* TARJETAS DE ANIME */
         .anime-card {
             background: var(--bg-card);
             border-radius: 10px;
             overflow: hidden;
             cursor: pointer;
-            transition: all 0.3s ease;
+            transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
             border: 1px solid #222;
         }
 
         .anime-card:hover {
-            transform: translateY(-10px) scale(1.03);
+            transform: translateY(-8px);
             border-color: var(--primary);
-            box-shadow: 0 0 20px rgba(255, 69, 0, 0.3);
+            box-shadow: 0 10px 20px rgba(0,0,0,0.5);
         }
 
         .anime-card img {
             width: 100%;
             height: 240px;
             object-fit: cover;
-            transition: 0.3s;
-        }
-
-        .anime-card:hover img {
-            filter: brightness(1.1);
         }
 
         .card-info {
             padding: 12px;
+            text-align: center;
         }
 
         .card-info h3 {
-            font-size: 0.95rem;
+            font-size: 0.9rem;
             margin: 0 0 5px 0;
             white-space: nowrap;
             overflow: hidden;
@@ -136,7 +138,7 @@
         }
 
         .card-info span {
-            font-size: 0.8rem;
+            font-size: 0.75rem;
             color: var(--primary);
             font-weight: bold;
         }
@@ -147,7 +149,6 @@
                 grid-template-columns: repeat(auto-fill, minmax(130px, 1fr));
                 gap: 15px;
             }
-            header h1 { font-size: 1.4rem; }
         }
     </style>
 </head>
@@ -159,22 +160,32 @@
 
     <main>
         <section class="player-section">
-            <h2 id="current-title">Bienvenido, selecciona un anime</h2>
+            <h2 id="current-title">Selecciona un anime para comenzar</h2>
+            
             <div class="video-container">
-                <iframe id="video-player" src="" allowfullscreen></iframe>
+                <iframe 
+                    id="video-player" 
+                    src="" 
+                    title="Reproductor de Anime"
+                    frameborder="0" 
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                    referrerpolicy="strict-origin-when-cross-origin" 
+                    allowfullscreen>
+                </iframe>
             </div>
         </section>
 
         <section class="catalog-container">
-            <h2 class="section-title">Explorar Catálogo</h2>
+            <h2 class="section-title">Últimos Episodios</h2>
             <div id="anime-list">
-                <p style="color: var(--text-gray);">Cargando catálogo...</p>
+                <p style="color: var(--text-gray); padding: 20px;">Cargando catálogo...</p>
             </div>
         </section>
     </main>
 
-    <footer style="text-align: center; padding: 40px; color: var(--text-gray); font-size: 0.8rem;">
-        <p>&copy; 2024 AnimeStream Project. Contenido vía YouTube Embed.</p>
+    <footer style="text-align: center; padding: 50px; color: var(--text-gray); font-size: 0.8rem; background: #050505; margin-top: 50px;">
+        <p>AnimeStream - Proyecto Educativo</p>
+        <p style="font-size: 0.7rem;">Este sitio no aloja archivos, solo incrusta contenido de YouTube.</p>
     </footer>
 
     <script src="script.js"></script>
