--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BeatFlow | Registro y Streaming</title>
+    <title>BeatFlow | Streaming & Community</title>
     <style>
         :root {
             --primary: #bc13fe; 
@@ -23,7 +23,7 @@
             overflow-x: hidden;
         }
 
-        /* TARJETA DE IDENTIDAD */
+        /* TARJETA DE IDENTIDAD (TOP RIGHT) */
         #user-card {
             position: fixed;
             top: 20px;
@@ -32,12 +32,28 @@
             padding: 8px 15px;
             border-radius: 50px;
             border: 1px solid var(--primary);
-            display: none; /* Se activa con JS */
+            display: none; 
             align-items: center;
             gap: 10px;
             z-index: 1000;
             box-shadow: 0 0 15px rgba(188, 19, 254, 0.4);
             backdrop-filter: blur(5px);
+        }
+
+        .btn-logout {
+            background: none;
+            border: 1px solid var(--secondary);
+            color: var(--secondary);
+            cursor: pointer;
+            border-radius: 5px;
+            padding: 2px 8px;
+            font-size: 0.7rem;
+            transition: 0.3s;
+        }
+
+        .btn-logout:hover {
+            background: var(--secondary);
+            color: white;
         }
 
         /* MODAL DE REGISTRO */
@@ -66,7 +82,7 @@
         }
 
         input[type="text"] {
-            width: 80%;
+            width: 85%;
             padding: 12px;
             border-radius: 8px;
             border: 1px solid #444;
@@ -74,6 +90,7 @@
             color: white;
             margin: 20px 0;
             text-align: center;
+            outline: none;
         }
 
         .btn-register {
@@ -84,19 +101,13 @@
             border-radius: 8px;
             cursor: pointer;
             font-weight: bold;
-            width: 85%;
+            width: 90%;
             transition: 0.3s;
         }
 
-        .btn-register:hover { background: var(--secondary); }
-
-        /* HEADER Y REPRODUCTOR */
-        header {
-            background: #111;
-            padding: 20px;
-            text-align: center;
-            border-bottom: 2px solid var(--primary);
-        }
+        /* REPRODUCTOR Y GRID */
+        header { background: #111; padding: 20px; text-align: center; border-bottom: 2px solid var(--primary); }
+        header span { color: var(--secondary); }
 
         .player-section { max-width: 800px; margin: 30px auto; padding: 0 20px; }
         .video-container {
@@ -106,28 +117,55 @@
         }
         .video-container iframe { position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: none; }
 
-        /* GRID */
         .catalog-container { max-width: 1000px; margin: 40px auto; padding: 20px; }
         #anime-list { display: grid; grid-template-columns: repeat(auto-fill, minmax(180px, 1fr)); gap: 25px; }
-        .anime-card { background: var(--bg-card); border-radius: 10px; cursor: pointer; border: 1px solid #222; transition: 0.3s; text-align: center;}
+        
+        .anime-card { background: var(--bg-card); border-radius: 10px; cursor: pointer; border: 1px solid #222; transition: 0.3s; overflow: hidden; }
         .anime-card:hover { transform: translateY(-5px); border-color: var(--primary); }
         .anime-card img { width: 100%; height: 150px; object-fit: cover; }
-        .card-info { padding: 10px; }
+        
+        /* SECCIÓN USUARIOS REGISTRADOS */
+        .users-section {
+            margin-top: 50px;
+            padding: 20px;
+            background: rgba(20, 20, 20, 0.5);
+            border-radius: 15px;
+            border: 1px dashed #444;
+        }
+
+        #user-list {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 10px;
+            margin-top: 15px;
+        }
+
+        .user-tag {
+            background: #222;
+            padding: 5px 15px;
+            border-radius: 20px;
+            border: 1px solid var(--primary);
+            font-size: 0.85rem;
+            color: var(--text-main);
+        }
     </style>
 </head>
 <body>
 
     <div id="user-card">
-        <div style="width: 30px; height: 30px; background: var(--primary); border-radius: 50%; display: flex; align-items: center; justify-content: center;">👤</div>
-        <span id="display-name"></span>
+        <div style="display: flex; align-items: center; gap: 8px;">
+            <div style="width: 25px; height: 25px; background: var(--primary); border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: 0.8rem;">👤</div>
+            <span id="display-name" style="font-weight: bold; font-size: 0.9rem;"></span>
+        </div>
+        <button class="btn-logout" onclick="cerrarSesion()">SALIR</button>
     </div>
 
     <div id="register-modal">
         <div class="modal-content">
-            <h2 style="color: var(--primary);">NUEVA SESIÓN</h2>
-            <p>Ingresa tu nombre para identificarte en el sistema:</p>
-            <input type="text" id="user-input" placeholder="Nombre de usuario...">
-            <button class="btn-register" onclick="registrarUsuario()">ENTRAR</button>
+            <h2 style="color: var(--primary); margin: 0;">BEATFLOW</h2>
+            <p style="color: var(--text-gray);">Crea tu sesión de oyente</p>
+            <input type="text" id="user-input" placeholder="Tu nombre...">
+            <button class="btn-register" onclick="registrarUsuario()">COMENZAR</button>
         </div>
     </div>
 
@@ -137,16 +175,21 @@
 
     <main>
         <section class="player-section">
-            <h2 id="current-title" style="color: var(--secondary);">Selecciona una estación</h2>
+            <h2 id="current-title" style="color: var(--secondary); font-weight: 300;">Selecciona una estación</h2>
             <div class="video-container">
                 <iframe id="video-player" src="" allow="autoplay; encrypted-media" allowfullscreen></iframe>
             </div>
         </section>
 
         <section class="catalog-container">
-            <h2 style="border-left: 4px solid var(--primary); padding-left: 10px;">BIBLIOTECA MUSICAL</h2>
+            <h2 style="border-left: 4px solid var(--primary); padding-left: 10px; margin-bottom: 25px;">BIBLIOTECA MUSICAL</h2>
             <div id="anime-list">
-                <p id="status">Cargando estaciones...</p>
+                </div>
+
+            <div class="users-section">
+                <h3 style="margin: 0; font-size: 1rem; color: var(--secondary);">OYENTES REGISTRADOS</h3>
+                <div id="user-list">
+                    </div>
             </div>
         </section>
     </main>
